@@ -11,8 +11,7 @@ public class SortUserTest {
     @Test
     public void when3Users() {
         SortUser sort = new SortUser();
-        List<User> list = new ArrayList<>();
-        list.addAll(Arrays.asList(new User("vasya", 66), new User("petya", 22), new User("vladimir", 20)));
+        List<User> list = List.of(new User("vasya", 66), new User("petya", 22), new User("vladimir", 20));
         Set<User> set = sort.sort(list);
         assertThat(set.iterator().next().getName(), is("vladimir"));
     }
@@ -20,8 +19,7 @@ public class SortUserTest {
     @Test
     public void whenSortByNameLength() {
         SortUser sort = new SortUser();
-        List<User> list = new ArrayList<>();
-        list.addAll(Arrays.asList(new User("vladimir", 66), new User("evgeniy", 22), new User("petya", 20)));
+        List<User> list = List.of(new User("vladimir", 66), new User("evgeniy", 22), new User("petya", 20));
         List<User> set = sort.sortNameLength(list);
         assertThat(set.iterator().next().getName(), is("petya"));
     }
@@ -29,8 +27,7 @@ public class SortUserTest {
     @Test
     public void whenSortBAllFields() {
         SortUser sort = new SortUser();
-        List<User> list = new ArrayList<>();
-        list.addAll(Arrays.asList(new User("Сергей", 25), new User("Иван", 30), new User("Сергей", 20), new User("Иван", 25)));
+        List<User> list = List.of(new User("Сергей", 25), new User("Иван", 30), new User("Сергей", 20), new User("Иван", 25));
         List<User> set = sort.sortByAllFields(list);
         assertThat(set.iterator().next().getName(), is("Иван"));
     }
